<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>tn.esprit</groupId>
    <artifactId>PI3A64</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
    <dependencies>
        <dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
            <version>8.0.21</version>
        </dependency>

        <dependency>

            <groupId>org.openjfx</groupId>

            <artifactId>javafx-fxml</artifactId>

            <version>21.0.2</version>

        </dependency>

        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-web</artifactId>
            <version>17.0.1</version> <!-- Use your JavaFX version -->
        </dependency>

        <dependency>

            <groupId>org.openjfx</groupId>

            <artifactId>javafx-controls</artifactId>

            <version>21.0.2</version>

        </dependency>
        <dependency>
            <groupId>de.jensd</groupId>
            <artifactId>fontawesomefx-fontawesome</artifactId>
            <version>4.7.0-9.1.2</version>
        </dependency>

        <dependency>
            <groupId>org.apache.pdfbox</groupId>
            <artifactId>pdfbox</artifactId>
            <version>2.0.27</version>
        </dependency>
    </dependencies>
    <build>

        <plugins>

            <plugin>

                <groupId>org.openjfx</groupId>

                <artifactId>javafx-maven-plugin</artifactId>

                <version>0.0.8</version>

                <configuration>

                    <mainClass>test.MainFX</mainClass>
                    <options>
                        <option>--add-opens</option>
                        <option>javafx.graphics/com.sun.javafx.application=PI3A64</option>
                    </options>

                </configuration>

            </plugin>

        </plugins>

    </build>


</project>